--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "webpack",
         "clean": "rm -rf dist",
         "migrate": "mkdir -p appdata && npx knex migrate:latest",
-        "start": "node dist/main.js"
+        "start": "NODE_ENV=development && node dist/main.js",
+        "start:prod": "NODE_ENV=production && node dist/main.js"
     },
     "repository": {
         "type": "git",
@@ -21,14 +22,18 @@
     "description": "",
     "dependencies": {
         "@inquirer/prompts": "^5.1.0",
+        "axios": "^1.7.3",
+        "cheerio": "^1.0.0-rc.12",
         "commander": "^12.1.0",
         "knex": "^3.1.0",
+        "progress": "^2.0.3",
         "sqlite3": "^5.1.7",
         "zx": "^8.1.3"
     },
     "devDependencies": {
         "@babel/core": "^7.24.7",
         "@babel/preset-env": "^7.24.7",
+        "@types/progress": "^2.0.7",
         "babel-loader": "^9.1.3",
         "ts-loader": "^9.5.1",
         "typescript": "^5.5.3",
