--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "migrate": "npx knex migrate:latest --env development",
         "migrate:prod": "npx knex migrate:latest --env production",
         "start": "NODE_ENV=development node dist/main.js",
-        "clean": "rm -rf dist"
+        "clean": "rm -rf dist",
+        "prettier": "prettier --write '{src,test}/**/*.{mjs,ts,tsx,sql}'"
     },
     "repository": {
         "type": "git",
@@ -35,6 +36,7 @@
         "@babel/preset-env": "^7.24.7",
         "@types/progress": "^2.0.7",
         "babel-loader": "^9.1.3",
+        "prettier": "^3.3.3",
         "ts-loader": "^9.5.1",
         "typescript": "^5.5.4",
         "webpack": "^5.92.1",
